samples/_failures_safe/1761447210_580716_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4bb46103.c: In function ‘handle_event’:
./samples/SAFE/__tmp_4bb46103.c:149:13: error: expected declaration or statement at end of input
  149 |             return process_processing_state(sm, event_data);
      |             ^~~~~~
./samples/SAFE/__tmp_4bb46103.c:149:13: error: expected declaration or statement at end of input
